; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/infiniband-diags/src/extr_ibqueryerrors.c_insert_lid2sl_table.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/infiniband-diags/src/extr_ibqueryerrors.c_insert_lid2sl_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sa_query_result = type { i32, i32 }
%struct.TYPE_3__ = type { i32 }

@lid2sl_table = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sa_query_result*)* @insert_lid2sl_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @insert_lid2sl_table(%struct.sa_query_result* %0) #0 {
  %2 = alloca %struct.sa_query_result*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  store %struct.sa_query_result* %0, %struct.sa_query_result** %2, align 8
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %26, %1
  %6 = load i32, i32* %3, align 4
  %7 = load %struct.sa_query_result*, %struct.sa_query_result** %2, align 8
  %8 = getelementptr inbounds %struct.sa_query_result, %struct.sa_query_result* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ult i32 %6, %9
  br i1 %10, label %11, label %29

11:                                               ; preds = %5
  %12 = load %struct.sa_query_result*, %struct.sa_query_result** %2, align 8
  %13 = getelementptr inbounds %struct.sa_query_result, %struct.sa_query_result* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i64 @sa_get_query_rec(i32 %14, i32 %15)
  %17 = inttoptr i64 %16 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %17, %struct.TYPE_3__** %4, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %19 = call i32 @ib_path_rec_sl(%struct.TYPE_3__* %18)
  %20 = load i32*, i32** @lid2sl_table, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i64 @cl_ntoh16(i32 %23)
  %25 = getelementptr inbounds i32, i32* %20, i64 %24
  store i32 %19, i32* %25, align 4
  br label %26

26:                                               ; preds = %11
  %27 = load i32, i32* %3, align 4
  %28 = add i32 %27, 1
  store i32 %28, i32* %3, align 4
  br label %5

29:                                               ; preds = %5
  ret void
}

declare dso_local i64 @sa_get_query_rec(i32, i32) #1

declare dso_local i32 @ib_path_rec_sl(%struct.TYPE_3__*) #1

declare dso_local i64 @cl_ntoh16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
